# spot_skills

./: .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTING_NEW.md  Dockerfile  LICENSE  Makefile  README.md  catkin_package_deps.txt  compose.yaml  out.txt  pyproject.toml  recorded-tfs.yaml
.catkin_tools/profiles/default/: devel_collisions.txt
.devcontainer/: .env  devcontainer.json
.devcontainer/noetic-no-gpu/: devcontainer.json
.devcontainer/noetic-nvidia/: devcontainer.json
.devcontainer/spot-moveit/: devcontainer.json
.devcontainer/spot-ros1/: devcontainer.json
.devcontainer/spot-ros1-no-gpu/: devcontainer.json
.devcontainer/spot-sdk/: devcontainer.json
.devcontainer/spot-tamp/: devcontainer.json
.devcontainer/spot-tamp-gpu/: devcontainer.json
.devcontainer/spot-tamp-mac/: devcontainer.json
.github/workflows/: check-docker-images.yaml  pull-docker-images.yaml  validate-docker.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
devel/.private/spot_cam/: .catkin  .rosinstall  setup.sh
devel/.private/spot_description/: .catkin  .rosinstall
devel/.private/spot_driver/: .catkin  .rosinstall  local_setup.sh
devel/.private/spot_msgs/: .catkin  .rosinstall
devel/.private/spot_skills/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/spot_viz/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/spot_cam/: BITStatus.h  Degradation.h  LoadSound.h  LoadSoundRequest.h  LoadSoundResponse.h  LookAtPoint.h  LookAtPointAction.h  LookAtPointActionFeedback.h  LookAtPointActionGoal.h  LookAtPointActionResult.h  LookAtPointFeedback.h  LookAtPointGoal.h  LookAtPointRequest.h  LookAtPointResponse.h  LookAtPointResult.h  PTZDescription.h  PTZDescriptionArray.h  PTZLimits.h  PTZState.h  PTZStateArray.h  PlaySound.h  PlaySoundRequest.h  PlaySoundResponse.h  PowerStatus.h  SetBool.h  SetBoolRequest.h  SetBoolResponse.h  SetFloat.h  SetFloatRequest.h  SetFloatResponse.h  SetIRColormap.h  SetIRColormapRequest.h  SetIRColormapResponse.h  SetIRMeterOverlay.h  SetIRMeterOverlayRequest.h  SetIRMeterOverlayResponse.h  SetPTZState.h  SetPTZStateRequest.h  SetPTZStateResponse.h  SetStreamParams.h  (+9 more)
devel/include/spot_msgs/: AprilTagProperties.h  ArmForceTrajectory.h  ArmForceTrajectoryRequest.h  ArmForceTrajectoryResponse.h  ArmJointMovement.h  ArmJointMovementRequest.h  ArmJointMovementResponse.h  BatteryState.h  BatteryStateArray.h  BehaviorFault.h  BehaviorFaultState.h  ClearBehaviorFault.h  ClearBehaviorFaultRequest.h  ClearBehaviorFaultResponse.h  ConstrainedArmJointMovement.h  ConstrainedArmJointMovementRequest.h  ConstrainedArmJointMovementResponse.h  Dock.h  DockAction.h  DockActionFeedback.h  DockActionGoal.h  DockActionResult.h  DockFeedback.h  DockGoal.h  DockRequest.h  DockResponse.h  DockResult.h  DockState.h  DownloadGraph.h  DownloadGraphRequest.h  DownloadGraphResponse.h  EStopState.h  EStopStateArray.h  Feedback.h  FootState.h  FootStateArray.h  FrameTreeSnapshot.h  GetDockState.h  GetDockStateRequest.h  GetDockStateResponse.h  (+91 more)
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  spot_cam.pc  spot_description.pc  spot_driver.pc  spot_msgs.pc  spot_skills.pc  spot_viz.pc
devel/lib/spot_cam/: spot_cam
devel/lib/spot_driver/: ros_helpers_test.py  spot_ros  spot_ros_test.py
docker/: Spot-Dockerfile  catkin_rebuild.sh  check_services_pullable.sh  core-compose.yaml  current_services.sh  docker_commands.md  entrypoint.sh  git_pull_fetch.sh  gui-compose.yaml  install_samdetic.sh  launch.sh  old-compose.yaml  pip_install.sh  shutdown.sh  source_all.sh  tmux-launch.sh  tmux_launch.sh
docs/: mapping-demo.md  navigation-demo.md
maps/: my_objects.yaml
scripts/: get_docker.sh  tmux_launch.sh
skill_images/: capture_imgs.py  capture_imgs_og.py  skill_sequences_old.yaml  stitch_front_images_distortion.py
src/detic_ros/: CMakeLists.txt  package.xml
src/detic_ros/launch/: demo.launch
src/detic_ros/scripts/: client.py  deticsam.py
src/detic_ros/src/: detic_node.py
src/sam2_ros/: CMakeLists.txt  package.xml
src/spot_move_base/: CMakeLists.txt  README.md  package.xml
src/spot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/spot_rtabmap/: CMakeLists.txt  README.md  package.xml  pointcloud_foot_filter_plugin.xml
src/spot_skills/: CMakeLists.txt  package.xml  requirements.txt  setup.py
(+1607 files in other folders)
