[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spot_skills"
version = "0.0.1"
dependencies = []
authors = [{ name = "Benned Hedegaard", email = "bhedegaa@cs.brown.edu" }]
description = "Motion-planning-based skills for Boston Dynamics' Spot robot."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"

[tool.hatch.build.targets.wheel]
packages = ["spot_skills"]
sources = { "src/spot_skills" = "spot_skills" }

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Default to all Ruff rules, ignores to be added as necessary
select = ["ALL"]
ignore = ["ANN101", "ANN204"] # Ignore type annotations on `self` and __init__
unfixable = ["F401"]          # Disable 'fix' for unused imports

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]   # Ignore assertions in test files
"**/scripts/*" = ["T201"] # Ignore print statements in scripts

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, indent with spaces (not tabs)
indent-style = "space"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
implicit_optional = false
check_untyped_defs = true
warn_return_any = true
show_error_code_links = true
warn_unused_configs = true # Warn if any per-module sections in the config file go unused
strict = true
